<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quirktastic</string>
    <string name="interests">Interests</string>
    <string name="next_colon">Next:</string>
    <string name="array_back"><![CDATA[< Back]]></string>
    <string name="save_for_later">Save for later</string>
    <string name="interest_title_info">What kind of stuff are you into?</string>
    <string name="interest_answer_title_info">Finish the sentence: \nWe will get along well if...</string>
    <string name="your_answer">Your answer</string>
    <string name="personality">Personality</string>
    <string name="next_personality">Next: Personality</string>
    <string name="interest_answer_ex_info">ex: You like Game of Thrones and Disney Movies</string>
    <string name="personality_title_info">How would your best friend \ndescribe you?</string>
    <string name="personality_answer_ex_info">ex: Anime trash with good taste and a superpower of being too nice</string>
    <string name="identity">Identity</string>
    <string name="next_identity">Next: Identity</string>
    <string name="interest_identitiy_gender_title_info">How do you identify?</string>
    <string name="gender_woman">Woman</string>
    <string name="gender_man">Man</string>
    <string name="gender_non_binary">Non-binary</string>
    <string name="select_one_that_apply">Select the one that apply</string>
    <string name="select_all_that_apply">Select all that apply</string>
    <string name="add_more_interests">Next: Add more interests</string>
    <string name="identity_title_info_more">How else do you identify?</string>
    <string name="social_life">Social Life</string>
    <string name="next_social_life">Next: Social Life</string>
    <string name="interest_social_title_info">What do you like to do?</string>
    <string name="drinking">Drinking</string>
    <string name="smoking">Smoking</string>
    <string name="marijuana">Marijuana</string>
    <string name="submit_profile">Submit Profile</string>
    <string name="events_title_info">Find friends at events like \nComic Cons and Anime Expos</string>
    <string name="events_name">Event Name</string>
    <string name="type_event_name">Type event name</string>
    <string name="continue_title_info">To get the most out of Quirktastic, \nplease accept our permission \nrequests</string>
    <string name="continue_title">Continue</string>
    <string name="events">Events</string>
    <string name="next_events">Next: Events</string>
    <string name="welcome_to_">Welcome to Quirktastic</string>
    <string name="continue_wi">Continue with Facebook</string>
    <string name="or_use_phon">or &#160;<u>use phone number</u></string>
    <string name="by_signing_">By signing up for Quirktastic, you agree to our</string>
    <string name="terms"><u>Terms</u> &amp; </string>
    <string name="privacy">&#160;<u>Privacy Policy</u></string>
    <string name="next_verify">Next: Verify Account</string>
    <string name="add_your_ph" tools:ignore="ExtraTranslation">Add your \nphone number</string>
    <string name="verify_your">Verify your phone number</string>
    <string name="please_ente">Please enter the five-digit code we just sent to your number +1 (415) 555-5555</string>
    <string name="please_enter_five_digit">Please enter the five-digit code we just sent to your number %1$s</string>
    <string name="didn_t_rece">Didn\'t receive a code?</string>
    <string name="let_s_get_s">Let\'s get some basic info</string>
    <string name="next_fill_o">Next: Fill out profile</string>
    <string name="verify_continue">Verify and Continue</string>
    <string name="next_add_ph">Next: Add photos</string>
    <string name="add_photos_">Add photos</string>
    <string name="give_us_you">Give us your quirky best! \nAdd up to 4 photos</string>
    <string name="save_for_la"><u>Save for later</u></string>
    <string name="next_add_in">Next: Add interests</string>
    <string name="back_arrow"><![CDATA[< Back]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_connections">My Connection</string>
    <string name="conversations">Conversations</string>
    <string name="account_settings">Account Settings</string>
    <string name="inbox">Inbox</string>
    <string name="preferences">Preferences</string>
    <string name="help_center_contact">Help Center + Contact</string>
    <string name="log_out">Log Out</string>
    <string name="contact_sup"><u>Contact Support</u></string>
    <string name="frequently_">Frequently Asked Questions</string>
    <string name="help_center">Help Center</string>
    <string name="something_h">Something have you stressed out?\nNeed a tutorial? We\'ve got the help you are\nlooking for!
</string>
    <string name="cross">X</string>
    <string name="community_preferences">Community Preferences</string>
    <string name="friends_gender">Friend\'s Gender </string>
    <string name="women">Woman</string>
    <string name="men">Men</string>
    <string name="non_binary">Non-binary</string>
    <string name="friend_ethnicity">Friend\'s Ethnicity</string>
    <string name="friend_age">Friend\'s Age</string>
    <string name="friend_social_life">Friend\'s Social Life</string>
    <string name="friend_location">Friend\'s Location</string>
    <string name="find_friend_attending">Find Friend\'s Attending My Events</string>
    <string name="my_account">My Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="notifications">Notifications</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="no_drinking">No Drinking</string>
    <string name="no_smoking">No Smoking</string>
    <string name="no_marijune">No Marijuna</string>
    <string name="americal_indian">American Indian</string>
    <string name="no_black">Black/African</string>
    <string name="no_east">East Asian</string>
    <string name="no_hispanic">Hispanic/ Latinx</string>
    <string name="no_middle_eastern">Middle Eastern</string>
    <string name="no_pacific_islander">Pacific Islander</string>
    <string name="no_south_asian">South Asian</string>
    <string name="no_white_causian">White/ Caucasian</string>
    <string name="no_prefrence">No Preference</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="my_quirkcod">My QuirkCode</string>
    <string name="scan_a_quir">Scan a QuirkCode</string>
    <string name="my_quirk_code">My Quirk Code</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="my_photos">My Photos</string>
    <string name="my_interests">My Interests</string>
    <string name="my_social_life">My Social Life</string>
    <string name="marijuana_terms">* Only select marijuana if it is legal in your  state</string>
    <string name="event_i_am_attending">Events I’m Attending</string>
    <string name="start_typing">Start typing in an event</string>
    <string name="search_for_comic">Search for comic cons and anime expos</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date Of Birthday</string>
    <string name="gender">Gender</string>
    <string name="my_ethnicity">Ethnicity</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="friend_request_sent">Friend request sent!</string>
    <string name="keep_browsing">Keep Browsing</string>
    <string name="we_will_get_along_if">We Will Get Along Well If:</string>
    <string name="how_friends_describe_me">How Friends Describe Me:</string>
    <string name="events_attending">Events Attending</string>
    <string name="introduce_yourself">Introduce yourself to</string>
    <string name="facebook_app_id">404389833433757</string>
    <string name="fb_login_protocol_scheme">fb404389833433757</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="please_select_interest">Please select interests</string>
    <string name="please_enter_interest">Please add interests</string>
    <string name="please_enter_your_personality">Please enter your personality</string>
    <string name="please_select_your_gender">Please select your identity</string>
    <string name="please_select_your_natioanlity">Please select one identity</string>
    <string name="please_select_your_social_life">Please select social life</string>
    <string name="max_three_events">You can only add maximum 3 events</string>
    <string name="please_introduce_yourself">Please introduce yourself</string>
    <string name="please_report">Please enter report</string>
    <string name="text_back">Back</string>
    <string name="error_contact_server">Error in contacting server</string>
    <string name="man">Man</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="send">Send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_denied"><![CDATA[If you reject permission,you can not use this service  Please turn on permissions at [Setting] > [Permission]]]></string>
    <string name="days">Days</string>
    <string name="months">months</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="send_a_message">Send a message</string>
    <string name="please_select_events_from_serach">Please select events from search</string>
    <string name="hine_dob">MM / DD / YYYY</string>
    <string name="bio_hint">Anime nerd with a love for closet cosplay. Slytherin</string>
    <string name="hint_personality_text">A Pocket full of sunshine</string>
    <string name="hint_identity_text">You like Disney Movies + LoL</string>
    <string name="no_user_found">No user found!!</string>
    <string name="no_user_pref">No user found based on your preference</string>
    <string name="my_bio">My Bio</string>
    <string name="header_bio">Header Bio</string>
    <string name="no_pending_request">No pending request found</string>
    <string name="no_connection_found">No connection found!!</string>
    <string name="no_conversation_found">No conversation found!!</string>
    <string name="internet_offline">Internet seems to be offline</string>
    <string name="hint_edit_event">Start typing in an event</string>
    <string name="exit">Please click BACK again to exit</string>
    <string name="city">City</string>
    <string name="enter_city">Ex. Los Angeles</string>
    <string name="state">State</string>
    <string name="enter_state">Ex. California</string>
    <string name="bio_text_count">0/150</string>
    <string name="scan_error">you cannot scan your own QuirkCode</string>
    <string name="invalid_user">Invalid user</string>
    <string name="map_api_key">AIzaSyDSQcTVK_OiEfPqSmcdDS-P8mjvJdyBJxE</string>
    <string name="event_add_successfully">Event add successfully</string>
    <string name="un_block">Un-block</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="zip_code">Zip Code</string>
    <string name="let_s_help_people_get_to_know_you_fill_out_your_profile_bio">Let\'s help people get to know \nyou. Fill out your profile bio!</string>
    <string name="no_qr_code_found">No QR code found in this image</string>
    <string name="back">Back</string>
    <string name="no_new_friend_requests">No new friend requests</string>
    <string name="scan_qr_code_using">Scan QR code using</string>
    <string name="meet_weirdos_just_like_you">Meet Weirdos Just Like You</string>
</resources>