<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".onboard.activity.PersonalityActivity">


    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/personality" />

    <TextView
        android:id="@+id/tvHeaderOnBoardTitle"
        style="@style/font_sfuitext_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv"
        android:gravity="center"
        android:text="@string/personality"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/tvPersonalityTitleLabel"
        style="@style/font_sfuitext_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeaderOnBoardTitle"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/personality_title_info"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBackNext"
        android:layout_below="@+id/tvPersonalityTitleLabel"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtPersonalityAnswer"
            style="@style/font_sfuitext_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/rectangle_blue_line"
            android:gravity="start"
            android:hint="@string/personality_answer_ex_info"
            android:maxLength="150"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorLightGrey"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvPersonalityAnswerCount"
            style="@style/font_sfuitext_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/bio_text_count"
            android:textColor="@color/stroke"
            android:textSize="@dimen/_14sdp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/llBackNext"
        android:layout_width="@dimen/_86sdp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSaveForLater"
            style="@style/font_sfuitext_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save_for_later"
            android:textColor="@color/save_for_later"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_rect_gradiant"
        android:gravity="center">

        <TextView
            style="@style/font_sfuitext_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/next_identity"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>


</RelativeLayout>