<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvBySigning"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo_welcome" />

        <ImageView
            android:id="@+id/imgWel"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_220sdp"
            android:layout_below="@+id/imgLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/welcome_people" />


        <TextView
            android:id="@+id/tvMeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/font_arial_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_minus36sdp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imgWel"
            android:text="@string/meet_weirdos_just_like_you" />

        <LinearLayout
            android:id="@+id/llLoginWithFb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_rect_white"
            android:gravity="center"
            android:elevation="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@+id/tvMeet"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_facebook" />

            <TextView
                android:id="@+id/tvContinueWithFb"
                style="@style/fontBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/continue_wi"
                android:textColor="#000000"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvOrUsePhone"
            style="@style/fontSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/llLoginWithFb"
            android:text="@string/or_use_phon"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tvBySigning"
        style="@style/fontSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llTermsAndPrivacy"
        android:layout_marginLeft="@dimen/_38sdp"
        android:layout_marginRight="@dimen/_38sdp"
        android:gravity="center_horizontal"
        android:text="@string/by_signing_"
        android:textColor="@color/black"
        android:textSize="@dimen/_9sdp" />

    <LinearLayout
        android:id="@+id/llTermsAndPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_38sdp"
        android:layout_marginRight="@dimen/_38sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTerms"
            style="@style/fontSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            style="@style/fontSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />
    </LinearLayout>


</RelativeLayout>