<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".onboard.activity.IdentityNationalityActivity">


    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
       android:src="@drawable/socia_identity"
        />

    <TextView
        android:id="@+id/tvHeaderOnBoardTitle"
        style="@style/font_sfuitext_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/iv"
        android:text="@string/identity"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/tvIdentityTitleLabel"
        style="@style/font_sfuitext_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeaderOnBoardTitle"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center"
        android:text="@string/identity_title_info_more"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/tvIdentitySelectAllLabel"
        style="@style/font_sfuitext_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvIdentityTitleLabel"
        android:layout_marginBottom="@dimen/_6sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/select_one_that_apply"
        android:textColor="@color/colorLightGrey"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBackNext"
        android:layout_below="@+id/tvIdentitySelectAllLabel"
        android:layout_marginBottom="@dimen/_5sdp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcvInterestList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_interest">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/llBackNext"
        android:layout_width="@dimen/_86sdp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSaveForLater"
            style="@style/font_sfuitext_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save_for_later"
            android:textColor="@color/save_for_later"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_rect_gradiant"
        android:gravity="center">

        <TextView
            style="@style/font_sfuitext_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/next_social_life"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>


</RelativeLayout>